fixed. Text.html and overflow in header menu

--- a/StyleSheets/MainStyleGeneral.css
+++ b/StyleSheets/MainStyleGeneral.css
@@ -14,6 +14,7 @@
     display: flex;
     justify-content: space-around;
     max-width: 1200px;
+    min-height: 90px;
     width: 100%;    
     border-bottom: 1px solid #d8d8d8;
 }
@@ -22,33 +23,44 @@
     vertical-align: middle;
     justify-content: space-around;
     max-width: 710px;
+    min-height: 90px;
     width: 100%;
+   
    
 }
 .navigation ul{
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     align-content: center; 
     flex-wrap: wrap;
     list-style: none;   
     flex-grow: 1;   
-    padding-left: 10%;      
+    padding-left: 10%;
+    min-height: 90px;
+    margin: 0 0 0 30px;  
 }
 .navigation ul li{
+    text-align: center;
+    line-height: 90px;
+    min-width: 85px;
+    height: 90px;
     margin: 0px 3%;
 }
 .logo{
-    text-align: center;
+    display: flex;
+    align-items: center;
+    width: 100%;
     max-width: 200px;
-    width: 100%;    
+    margin: 0px;    
+    text-indent: 10%;
 }
 .menu_btn{ 
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    max-width: 290px;
-    width: 100%;   
+    width: 290px;
+    min-height: 90px;
 }
 .login{
     background-color: #16133E;  
@@ -59,10 +71,10 @@
     color: #16133E;   
 }
 .menu_btn button{
-    max-width: 110px;
+    min-width: 110px;
     width: 100%;
-    max-height: 50px;
-    height: 100%;
+    min-height: 50px;
+    max-height: 100px;
     margin: 0px 3%; 
     border: 2px solid #16133E;
     font-weight: 600;
@@ -445,7 +457,6 @@
     border-radius: 8px;
     background-color: #FFF;
     box-shadow: 0px 30px 50px rgba(0, 0, 0, 0.6);
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 .close{
     position: absolute;
@@ -477,7 +488,6 @@
 .modal h2{
     margin: 0px;
     font-size: 24px;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 .modal p{
     font-size: 14px;
@@ -512,13 +522,6 @@ input[type="submit"] + p{
 
 /*Настройка цветов/шрифтов*/
 
-@font-face{
-    font-family: Market Deco;
-    src: url(Fonts/Market_Deco.ttf);
-}
-h1, h2{
-    font-family: Market Deco;
-}
 a:link{
     text-decoration: none;
 }
